feat: kafka service refactoring

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 quarkus.application.name=insurance-claim-processor
 quarkus.profile=dev
 
-# Database Configuration (PostgreSQL)
+# Database Configuration (PostgresSQL)
 quarkus.datasource.db-kind=postgresql
 quarkus.datasource.username=finance_user
 quarkus.datasource.password=finance_pass
@@ -70,6 +70,9 @@ quarkus.smallrye-metrics.http.enabled=true
 quarkus.smallrye-openapi.path=/openapi
 quarkus.swagger-ui.path=/swagger-ui
 quarkus.swagger-ui.always-include=true
+
+# Virtual Threads Configuration
+quarkus.virtual-threads.enabled=true
 
 # Dev Services Configuration (for development)
 %dev.quarkus.datasource.devservices.enabled=false
